--- a/css/tour.css
+++ b/css/tour.css
@@ -11,6 +11,47 @@
     line-height: 50px;
 }
 
+.tour-container .btn-book {
+    background: #CF1011;
+    color: #FFF;
+    padding: 5px 30px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 0;
+    text-transform: uppercase;
+    transition: .3s ease-in-out;
+}
+
+.tour-container .btn-book:hover {
+    border: 1px solid #CF1011;
+    background: #fff;
+
+}
+.tour-container .btn-book:hover a {
+    color: #CF1011;
+} 
+
+.tour-container .btn-book a {
+    text-decoration: none;
+    color: #fff;
+}
+
+
+.tour-container .tour-widget {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 50px 30px;
+    color: #474650!important;
+}
+
+.tour-container .tour-widget:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.tour-content {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 30px;
+}
+
 .tour-content .tour-image {
     overflow: hidden;
 }
@@ -38,15 +79,14 @@
 }
 
 .tour-widget div {
-    margin: 10px;
+    margin: 10px 0;
 }
 
 .tour-widget .w-title {
     font-size: 25px;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: bold;
     color: #000;
-    padding: 10px;
     margin-bottom: 20px;
 }
 
@@ -65,14 +105,15 @@
 
 .tour-widget p {
     display: inline!important;
-    color: #888888;
+    color: #0F1C24;
     font-size: 15px;
+    font-weight: 600;
 }
 
 .tour-widget h5 {
     display: inline!important;
     padding-right: 5px;
-    color: #888888;
+    color: #5C5D62;
 }
 
 /* Đặt tour */
@@ -81,8 +122,9 @@
     margin-top: 100px;
 }
 
-.tour-book form {
-    font-size: 15px;
+
+.tour-book form h2 {
+    font-size: 1.429em;
 }
 
 .tour-book .progress {
@@ -97,8 +139,16 @@
 }
 
 .tour-book .active {
-    background: #2196F3;
-    color: #fff;
+    padding: 20px;
+}
+
+.tour-book .tour-content .row {
+    margin-left: 0!important;
+    margin-right: 0!important;
+}
+
+.tour-book .tab-content {
+    background: #eee;
 }
 
 .tour-book .btn-info {
@@ -172,8 +222,39 @@
     padding: 0;
 }
 
+
 .tour-book .btn-link:hover {
     text-decoration: none;
+}
+
+.tour-book .btn-next, .tour-book .btn-previous {
+    background: #3A78FF;
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    transition: .1s;
+}
+
+.tour-book .btn-next:hover,
+.tour-book .btn-previous:hover
+{
+    background: #333;
+    color: #fff;
+}
+
+.tour-book .btn-place {
+    background: #3BA447;
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    transition: .1s;
+}
+
+.tour-book .btn-place:hover {
+    color: #fff;
+    background: #333;
 }
 
 .tour-book #accordion .btn-primary:focus{
