--- a/css/tour.css
+++ b/css/tour.css
@@ -1,4 +1,3 @@
-
 .tour-container .tour-title {
     margin: 50px 0;
     text-align: center;
@@ -16,7 +15,6 @@
     color: #FFF;
     padding: 5px 30px;
     margin-top: 20px;
-    border: none;
     border-radius: 0;
     text-transform: uppercase;
     transition: .3s ease-in-out;
@@ -25,30 +23,30 @@
 .tour-container .btn-book:hover {
     border: 1px solid #CF1011;
     background: #fff;
-
 }
+
 .tour-container .btn-book:hover a {
     color: #CF1011;
-} 
+}
 
 .tour-container .btn-book a {
     text-decoration: none;
     color: #fff;
 }
 
-
 .tour-container .tour-widget {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 50px 30px;
     color: #474650!important;
 }
 
-.tour-container .tour-widget:hover {
+
+/* .tour-container .tour-widget:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
+} */
 
 .tour-content {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 30px;
 }
 
@@ -116,12 +114,12 @@
     color: #5C5D62;
 }
 
+
 /* Đặt tour */
 
 .tour-book {
     margin-top: 100px;
 }
-
 
 .tour-book form h2 {
     font-size: 1.429em;
@@ -186,9 +184,10 @@
     padding-right: 5px;
 }
 
-.tour-book .subtour-info #Child  {
+.tour-book .subtour-info #Child {
     display: inline-block!important;
 }
+
 
 /* .tour-book .subtour-info .display-hidden {
     display: none;
@@ -203,11 +202,12 @@
     font-weight: bold;
 }
 
-.tour-book #Sum p{
+.tour-book #Sum p {
     font-size: 20px;
     font-weight: bold;
 }
-.tour-book #accordion .btn-primary{
+
+.tour-book #accordion .btn-primary {
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
@@ -222,12 +222,12 @@
     padding: 0;
 }
 
-
 .tour-book .btn-link:hover {
     text-decoration: none;
 }
 
-.tour-book .btn-next, .tour-book .btn-previous {
+.tour-book .btn-next,
+.tour-book .btn-previous {
     background: #3A78FF;
     padding: 10px 30px;
     color: #fff;
@@ -237,8 +237,7 @@
 }
 
 .tour-book .btn-next:hover,
-.tour-book .btn-previous:hover
-{
+.tour-book .btn-previous:hover {
     background: #333;
     color: #fff;
 }
@@ -257,7 +256,7 @@
     background: #333;
 }
 
-.tour-book #accordion .btn-primary:focus{
+.tour-book #accordion .btn-primary:focus {
     background: #2196F3;
     color: #fff;
     text-decoration: none;
@@ -276,10 +275,9 @@
 .card .payment p {
     font-size: 15px;
     margin: 0;
-
 }
 
-.btn-progress .btn-success{
+.btn-progress .btn-success {
     padding: 10px 20px;
     margin-right: 0;
     width: 100%;
