--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
-
 * {
     margin: 0;
     padding: 0;
@@ -11,11 +10,9 @@ body {
     color: #0D0D11!important;
 }
 
-
 html {
     font-size: 13px;
     overflow-x: hidden;
-
 }
 
 ul {
@@ -37,6 +34,10 @@ a:hover {
 
 p {
     font-size: 14px;
+}
+
+.container {
+    margin: 50px 0;
 }
 
 .fixed-top {
@@ -97,14 +98,16 @@ p {
     color: #000;
     padding: 10px !important;
     transition: .5s ease-in-out;
-
 }
 
 .navbar-scrolled .navbar-light .navbar-nav .nav-link {
     color: #000!important;
 }
 
-.navbar-scrolled .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link{
+.navbar-scrolled .navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show>.nav-link {
     color: #000!important;
 }
 
@@ -122,7 +125,10 @@ p {
     letter-spacing: 2px;
 }
 
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link{
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show>.nav-link {
     color: #fff!important;
 }
 
@@ -134,6 +140,7 @@ p {
     text-align: center;
     transition: .5s ease-in-out;
 }
+
 .navbar-nav i {
     font-size: 20px!important;
 }
@@ -142,7 +149,8 @@ p {
     padding: .2rem 1rem!important;
 }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
     color: #fff!important;
 }
 
@@ -150,69 +158,85 @@ p {
     height: 100vh;
 }
 
+
+/* USER */
+
+.users-container {
+    margin: 50px 0;
+    height: 100vh;
+}
+
+.users-container .tab-content h5 {
+    text-align: center;
+    font-size: 35px;
+}
+
+
 /* Card */
+
+
 /* 
 card-tour {
-    display: flex;
-    grid-template-columns: 1fr repeat(12, mimax(auto, 60px)) 1fr;
-    grid-gap: 40px;
-    padding: 60px 0;
+display: flex;
+grid-template-columns: 1fr repeat(12, mimax(auto, 60px)) 1fr;
+grid-gap: 40px;
+padding: 60px 0;
 }
 
 .text-medium {
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+font-weight: 400;
 }
 
 .cards {
-    grid-column: 2 / span 12;
-    display: grid;
-    grid-template-columns: repeat(12, mimax(auto, 60px));
-    grid-gap: 40px;
+grid-column: 2 / span 12;
+display: grid;
+grid-template-columns: repeat(12, mimax(auto, 60px));
+grid-gap: 40px;
 }
 
 .card {
-    grid-column-end: span 4;
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    transition: all .3s ease 0s;
+grid-column-end: span 4;
+display: flex;
+flex-direction: column;
+cursor: pointer;
+transition: all .3s ease 0s;
 }
 
 .card_image-container {
-    width: 100%;
-    padding-top: 56.25%;
-    overflow: hidden;
-    position: relative;
+width: 100%;
+padding-top: 56.25%;
+overflow: hidden;
+position: relative;
 }
 
 .card_image-container img {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+width: 100%;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
 }
 
 .card_content {
-    padding: 20px;
+padding: 20px;
 }
 
 .card_title {
-    margin-bottom: 20px;
+margin-bottom: 20px;
 }
 
 .card-info {
-    display: flex;
-    align-self: center;
-    align-items: center;
+display: flex;
+align-self: center;
+align-items: center;
 }
 
 .card_price {
-    margin-left: auto;
-    padding: 5px 20px;
-    border-radius: 20px;
+margin-left: auto;
+padding: 5px 20px;
+border-radius: 20px;
 } */
 
 
@@ -241,25 +265,25 @@ card-tour {
 }
 
 
-/* Card */
+/* TOUR TYPE */
 
-.card-deck {
-    margin: 30px 100px!important;
+.tour-type .card {
+    height: 400px;
+}
+
+.tour-type .card-img-top {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
-.card-deck .row .col-6 {
-    padding: 0!important;
+.tour-type .card-body .card-title {
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
 }
 
-<<<<<<< HEAD
-=======
-.card-deck .card {
-    padding: 0!important;
-}
-
->>>>>>> 4525edfa2c5407c549ecb006f17a89dbf96cc8c3
-.dark-overlay {
+.tour-type .dark-overlay {
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     text-align: center;
@@ -273,31 +297,29 @@ card-tour {
     color: #fff;
 }
 
-.card-body {
-    position: absolute;
-    transform: translate(0);
-    transition: all .3s ease-in-out;
-    max-height: 380px;
-    width: 100%;
-
+.tour-type .card:hover .dark-overlay {
+    opacity: 1;
+    transition: all .4s ease-in-out;
 }
 
-.card-img-top {
+.tour-type .card:hover .card-body {
+    transform: translateY(100px);
+    transition: all .4s ease-in-out;
+}
+
+.tour-type .card img {
+    transition: all 0.3s ease;
+}
+
+.tour-type .card:hover img {
+    transform: scale3d(1.1, 1.1, 1);
+}
+
+.tour-type .card {
     overflow: hidden;
-    height: 380px;
 }
 
-.card {
-    overflow: hidden;
-}
-
-.card-body h5 {
-    font-size: 20px;
-    letter-spacing: 1px;
-    font-weight: 400;
-}
-
-.card-body .btn {
+.tour-type .card-body .btn-dark {
     padding: 10px 30px;
     border-radius: 20px;
     background: #010101;
@@ -306,117 +328,122 @@ card-tour {
     font-weight: 400;
 }
 
-.card-body .btn:hover {
+.tour-type .card-body .btn-dark:hover {
     background: #fff;
     border-color: #fff;
     color: #000;
     font-weight: 400;
 }
 
-.card:hover .dark-overlay {
-    opacity: 1;
-    transition: all .3s ease-in-out;
+
+/* TOUR LISt */
+
+.tour-container {
+    margin: 100px 0;
 }
 
-.card:hover .card-body {
-    transform: translateY(100px);
-    transition: all .3s ease-in-out;
-}
-
-.card img {
-    transition: all 0.3s ease;
-}
-
-.card:hover img {
-    transform: scale3d(1.1, 1.1, 1);
-}
-
-
-/* TOUR LIST */
-
-.tour-list {
-    margin: 50px;
-}
-.tour-list .cardd-deck .col-4 {
-    height: 400px;
-    margin: 10px 0;
-}
-.tour-list .cardd-deck {
-    overflow: hidden;
-}
-
-.tour-list .cardd-deck .cardd-inner {
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-    height: 100%;
-    margin: 0 10px;
-}
-
-.tour-list .cardd-deck .card-img {
-    position: relative;
-    
-
-    overflow: hidden;
-}
-
-.tour-list .cardd-deck img {
-    width: 100%;
-    height: 200px;
-
-}
-
-.tour-list .sale {
-    position: absolute;
-    padding: 10px 30px;
-    right: 0px;
-    top: 0px;
-    background: #cc0033;
+.tour-container .tour-title {
+    font-size: 35px;
     text-align: center;
-    color: #fff;
-    font-size: 15px;
-    border-bottom-left-radius: 5px;
-
+    margin: 50px 0;
 }
 
-.tour-list .tour-like {
+.card {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+
+.card-img-top {
+    overflow: hidden;
+    position: relative;
+}
+
+.card-img-top .feature {
     position: absolute;
-    font-size: 20px;
-    z-index: 20;
-    top: 0px;
+    font-size: 13px;
+    top: 15px;
     left: 0;
-    padding: 10px 30px;
+    background: #19A1E5;
     color: #fff;
-    transition: .1s ease-in-out;
+    padding: 6px 10px;
+    border-radius: 0 3px 3px 0;
 }
 
-.tour-list .tour-like:hover {
-    color: #c0033d;
+.card-img-top .like {
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    color: #fff;
+    font-size: 21px;
+    transition: .3s;
+}
+
+.card-img-top .like:hover {
+    color: #CC0033;
     transform: scale(1.5);
 }
 
-
-.cardd-inner .cardd-title {
-    padding: 0 10px;
-    margin: 15px 0;
+.card-img-top img {
+    transition: all 0.4s ease;
 }
 
-.cardd-inner .card-bottom {
-    padding: 0 10px;
-} 
-.tour-list .cardd-deck .cardd-inner .card-bottom .left-bot-card {
-    float: left;
+.card:hover .card-img-top img {
+    transform: scale3d(1.1, 1.1, 1);
 }
 
-.tour-list .cardd-deck .cardd-inner .card-bottom .right-bot-card {
-    float: right;
-    margin: auto 0;
+.card-body {
+    padding: 15px 20px;
+}
+
+.card-body .card-text i {
+    color: #FFDC00;
+}
+
+.card-body a:hover {
+    text-decoration: none;
+}
+
+.card-body .card-location {
+    color: #5E6D77;
+    font-size: 13px;
+    margin-bottom: 10px;
+}
+
+.card-body .card-title {
+    color: #1A2B50;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.card-body .reviews {
+    margin-left: 10px;
+    font-size: 13px;
+    color: #768092;
+}
+
+.card .card-footer {
+    border: none;
+    background: #fff;
+    color: #768092;
+    margin-bottom: 10px;
+}
+
+.card-footer .fa-dollar-sign {
+    color: #FA5636;
+}
+
+.card .card-footer .price {
+    font-size: 18px;
+    font-weight: bold;
+    color: #1A2B50;
 }
 
 
 /* INTRO */
 
 .intro {
-	width: 100%;
-	background: #FFFFFF;
+    width: 100%;
+    background: #FFFFFF;
     z-index: 1;
     padding: 100px 70px;
     border-bottom: 2px solid #f1f1f1;
@@ -424,34 +451,30 @@ card-tour {
 
 .intro-container {
     width: 100%;
-	border-bottom: solid 2px #e4e6e8;
-	padding-top: 142px;
-	padding-bottom: 121px;
+    border-bottom: solid 2px #e4e6e8;
+    padding-top: 142px;
+    padding-bottom: 121px;
 }
 
 .intro-icon {
     width: 70px;
-	height: 71px;
+    height: 71px;
 }
 
-.intro-icon img
-{
-	max-width: 100%;
+.intro-icon img {
+    max-width: 100%;
 }
 
-.intro-content
-{
-	padding-left: 28px;
+.intro-content {
+    padding-left: 28px;
 }
 
-.intro-title
-{
-	font-family: 'Oswald', sans-serif;
-	font-size: 18px;
-	color: #181818;
-	font-weight: 400;
+.intro-title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    color: #181818;
+    font-weight: 400;
 }
-
 
 
 /* TOUR ĐẶT NHIỀU */
@@ -480,7 +503,6 @@ card-tour {
     width: 100%;
     height: 100%;
     max-height: 200px;
-
 }
 
 .tour-hot .card-body h5 {
@@ -513,11 +535,40 @@ card-tour {
 
 /* FOOTER */
 
+.to-top {
+    color: #fff;
+    background: #2196F3;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 15px;
+    width: 35px;
+    height: 35px;
+    transition: all .3s;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.to-top:hover {
+    text-decoration: none;
+    background: #212121;
+    color: #fff;
+}
+
+.to-top.active {
+    bottom: 20px;
+    pointer-events: auto;
+    opacity: 1;
+}
+
 .footer {
     font-size: 20px;
     background: #212121;
     color: #fff;
-
 }
 
 .footer h3 {
@@ -546,7 +597,6 @@ card-tour {
     left: 0;
 }
 
-
 .footer .row {
     padding: 50px 60px;
 }
@@ -561,17 +611,16 @@ card-tour {
     font-size: 35px;
 }
 
+
 /* END FOOTER */
 
 
 /* Responsive */
 
-@media only screen and (max-width: 767px)
-{
-    .navbar-nav.ml-auto{
+@media only screen and (max-width: 767px) {
+    .navbar-nav.ml-auto {
         background: rgba(0, 0, 0, .2);
     }
-
     .navbar-toggler {
         padding: 1px 5px;
         font-size: 18px;
