--- a/css/styles.css
+++ b/css/styles.css
@@ -336,8 +336,8 @@ h3 {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin-bottom: 25px;
-    height: 100%;
-    max-height: 380px;
+    /* height: 100%;
+    max-height: 380px; */
 }
 
 .card-img-top {
@@ -603,6 +603,16 @@ h3 {
     color: #fff;
     margin-top: 30px;
 }
+
+.footer a {
+    text-decoration: none;
+    color: #fff
+}
+
+.footer a:hover {
+    text-decoration: none;
+}
+
 
 .footer h3 {
     font-size: 40px;
