--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,4 @@
+img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {display: none;}
 body {
     font-family: 'Source Sans Pro', sans-serif;
     background-size: cover;
