--- a/css/tour.css
+++ b/css/tour.css
@@ -1,3 +1,4 @@
+img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {display: none;}
 .tour-container .tour-title {
     margin: 50px 0;
     text-align: center;
