--- a/css/user.css
+++ b/css/user.css
@@ -1,3 +1,4 @@
+img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {display: none;}
 .users {
     margin: 50px 120px;
 }
